<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical"
    android:background="#5DADE2"
    android:padding="20dp">

    <ImageView
        android:id="@+id/bankCardIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/bankcardicon"
        android:transitionName="bankCardIconTransition"/>

    <TextView
        android:id="@+id/welcomeRegistrationTV"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:fontFamily="@font/bungee"
        android:text="Welcome,"
        android:textColor="@color/white"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="326dp"
        android:layout_marginTop="-20dp"
        android:layout_below="@id/bankCardIcon"
        android:transitionName="welcomeTransition"/>

    <TextView
        android:id="@+id/signUpToContinueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="Sign up to start!"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_below="@id/welcomeRegistrationTV"
        android:transitionName="singInToContinueTransition"/>

    <LinearLayout
        android:id="@+id/registrationFillOutFieldsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_below="@id/signUpToContinueTV">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="2dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/antic"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="2dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:fontFamily="@font/antic" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="2dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/antic"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordAgain"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="2dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordAgainInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/antic"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
    <TextView
        android:id="@+id/accountTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountType"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="@font/antic"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/registrationFillOutFieldsLL"
        android:layout_marginTop="-16dp"/>

    <RadioGroup
        android:id="@+id/accountTypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountTypeTV"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp">
        <RadioButton
            android:id="@+id/personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/antic"
            android:textFontWeight="1000"
            android:textColor="@color/white"/>
        <RadioButton
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/antic"
            android:textFontWeight="1000"
            android:textColor="@color/white" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/signUpAndCancelButtonsLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/accountTypeRadioGroup">
        <Button
            android:id="@+id/signUpRegistrationButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:background="@color/blue1"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:onClick="register"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/blue1"
            android:text="Cancel"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:onClick="cancel"/>
    </LinearLayout>


</RelativeLayout>